maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:62: error: not found: value faceAuMur
	if (!faceAuMur) {
             ^JediEscaper:69: error: not found: value faceAuMur
	if (!faceAuMur) {
             ^JediEscaper:76: error: not found: value faceAuMur
	if (!faceAuMur) {
             ^JediEscaper:83: error: not found: value faceAuMur
	if (!faceAuMur) {
             ^